[gd_scene load_steps=4 format=3 uid="uid://3mpt3w0tbewr"]

[ext_resource type="Theme" uid="uid://inr4tcdwqeln" path="res://game_theme.tres" id="1_fbaqg"]
[ext_resource type="Script" path="res://challenges/memo/memo.gd" id="1_vkcon"]
[ext_resource type="PackedScene" uid="uid://bf14kfetgi42a" path="res://challenges/difficulty_picker.tscn" id="3_b6t65"]

[node name="Memo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fbaqg")
script = ExtResource("1_vkcon")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DifficultyPicker" parent="MarginContainer" instance=ExtResource("3_b6t65")]
unique_name_in_owner = true
layout_mode = 2

[node name="Challenge" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Timer" type="Label" parent="MarginContainer/Challenge"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -36.0
offset_bottom = 52.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 72
text = "00:00"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Challenge"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Challenge/MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Challenge/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardsContainer" type="GridContainer" parent="MarginContainer/Challenge/MarginContainer/ScrollContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 4

[connection signal="difficulty_picked" from="MarginContainer/DifficultyPicker" to="." method="_on_difficulty_picked"]
